DevTools: Clean src/dist structure
Reorganized DevTools with clear separation of source and build artifacts.

New structure:
- src/ - all source code
  - hook/modules/ - ES6 class modules (9 modules)
  - hook/index.js - hook entry point
  - panel/ - panel components, utils
  - panel/index.js - panel entry point
  - background.js, content-script.js, devtools-page.js
- dist/ - build output (gitignored)
  - All bundled and copied files
  - Load extension from this directory

Build improvements:
- hook.js, background.js, panel.js all bundled via esbuild
- background.js now bundles MessageRouter (fixes service worker error)
- Static files copied to dist/
- All paths in dist/ are relative to dist/ root
- Fixed devtools.html and devtools-page.js paths

Benefits:
- Clear source vs build separation
- No source/build mixing
- Standard src → dist pattern
- Easy to gitignore dist/
- No confusion about what to edit

Documentation:
- STRUCTURE.md - new structure guide
- Updated REFACTORING.md
- src/hook/modules/README.md

Tested and working

--- a/devtools/devtools.html
+++ b/devtools/devtools.html
@@ -5,7 +5,7 @@
   <title>Veda DevTools</title>
 </head>
 <body>
-  <script src="src/devtools.js"></script>
+  <script src="devtools.js"></script>
 </body>
 </html>
 
