DevTools: Add model ID display in Effects tab
Show linked model ID for components in the Effects tab, matching the display style from Components tab. Model IDs are displayed in gray color for better visual hierarchy.

--- a/devtools/src/panel/panel.html
+++ b/devtools/src/panel/panel.html
@@ -630,10 +630,9 @@
     }
 
     .tree-model-id {
-      color: var(--accent-purple);
+      color: var(--text-secondary);
       font-family: var(--font-mono);
       font-size: var(--font-size-xs);
-      opacity: 0.8;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
