DevTools: Improve toolbar branding and UX
- Add "Veda DevTools" brand name in toolbar
- Replace text buttons with icon-only buttons
- Reduce button padding for compact layout
- Unify icon sizes (15px) for visual consistency
- Add keyboard shortcuts: R (refresh), C (clear), G (force GC)
- Update keyboard hints in sidebar footer

--- a/devtools/src/panel/panel.html
+++ b/devtools/src/panel/panel.html
@@ -114,6 +114,13 @@
       flex: 1;
     }
 
+    .toolbar-brand {
+      font-size: var(--font-size-md);
+      font-weight: 600;
+      color: var(--accent-cyan);
+      letter-spacing: 0.5px;
+    }
+
     /* Buttons */
     .btn {
       display: inline-flex;
@@ -149,6 +156,22 @@
 
     .btn .icon {
       font-size: var(--font-size-lg);
+    }
+
+    .btn-icon {
+      background: transparent;
+      color: var(--text-primary);
+      padding: 4px 6px;
+      min-width: 28px;
+      justify-content: center;
+      font-size: 15px;
+      line-height: 1;
+      border: 1px solid transparent;
+    }
+
+    .btn-icon:hover {
+      background: var(--bg-hover);
+      border-color: var(--border-color);
     }
 
     /* Stats */
