--- a/devtools/src/panel/panel.html
+++ b/devtools/src/panel/panel.html
@@ -174,6 +174,23 @@
       border-color: var(--border-color);
     }
 
+    .btn-icon.flash {
+      animation: flash 200ms ease-out;
+    }
+
+    @keyframes flash {
+      0% {
+        background: var(--accent-blue);
+        border-color: var(--accent-blue);
+        transform: scale(1.1);
+      }
+      100% {
+        background: transparent;
+        border-color: transparent;
+        transform: scale(1);
+      }
+    }
+
     /* Stats */
     .stats {
       display: flex;
