DevTools: Compact and refine toolbar UI
- Reduce toolbar height (28px) for more compact layout
- Update branding style: medium size, normal weight, primary color
- Maintain colorful emoji theme icons (sun/moon)

--- a/devtools/src/panel/panel.html
+++ b/devtools/src/panel/panel.html
@@ -138,11 +138,11 @@
     .toolbar {
       background: var(--bg-secondary);
       border-bottom: 1px solid var(--border-color);
-      padding: var(--space-sm) var(--space-md);
+      padding: 4px var(--space-md);
       display: flex;
       gap: var(--space-sm);
       align-items: center;
-      min-height: 40px;
+      min-height: 28px;
     }
 
     .toolbar-spacer {
@@ -151,9 +151,9 @@
 
     .toolbar-brand {
       font-size: var(--font-size-md);
-      font-weight: 600;
-      color: var(--accent-cyan);
-      letter-spacing: 0.5px;
+      font-weight: 400;
+      color: var(--text-primary);
+      letter-spacing: 0.3px;
     }
 
     /* Buttons */
