--- a/app-todo/index.html
+++ b/app-todo/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TodoMVC - Veda Framework</title>
-  <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
   <style>
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -13,294 +12,92 @@
       margin: 0;
       padding: 0;
     }
-
     .container {
-      max-width: 800px;
+      max-width: 550px;
       margin: 50px auto;
       background: white;
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
       padding: 40px;
+      text-align: center;
     }
-
     h1 {
       font-size: 100px;
       font-weight: 100;
-      text-align: center;
       color: rgba(175, 47, 47, 0.15);
-      margin: 0 0 30px 0;
+      margin: 0 0 20px 0;
     }
-
-    h2 {
-      font-size: 24px;
-      font-weight: 300;
-      color: #333;
-      margin: 30px 0 15px 0;
-    }
-
-    p {
-      line-height: 1.6;
-      margin: 10px 0;
-    }
-
-    .implementations {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      margin: 30px 0;
-    }
-
-    .card {
-      border: 2px solid #ededed;
-      padding: 20px;
-      border-radius: 5px;
-      transition: all 0.3s;
-    }
-
-    .card:hover {
-      border-color: #af2f2f;
-      box-shadow: 0 2px 8px rgba(175, 47, 47, 0.2);
-    }
-
-    .card h3 {
-      margin: 0 0 10px 0;
-      color: #af2f2f;
-      font-size: 20px;
-      font-weight: 400;
-    }
-
-    .card p {
+    .subtitle {
       font-size: 14px;
-      color: #777;
-      margin: 5px 0;
+      color: #bbb;
+      margin-bottom: 30px;
     }
-
-    .card ul {
-      list-style: none;
-      padding: 0;
-      margin: 15px 0;
-    }
-
-    .card li {
-      padding: 5px 0;
-      font-size: 13px;
-      color: #555;
-    }
-
-    .card li:before {
-      content: "✓ ";
-      color: #5dc2af;
-      font-weight: bold;
-      margin-right: 5px;
-    }
-
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      background: #af2f2f;
-      color: white;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 3px;
-      font-size: 14px;
-      font-weight: 400;
-      transition: background 0.3s;
-      margin-top: 15px;
-    }
-
-    .btn:hover {
-      background: #8b2424;
-    }
-
     .features {
+      text-align: left;
       margin: 30px 0;
       padding: 20px;
       background: #fafafa;
       border-left: 3px solid #af2f2f;
     }
-
     .features h3 {
       margin: 0 0 15px 0;
       color: #333;
+      font-weight: 400;
     }
-
     .features ul {
       margin: 10px 0;
       padding-left: 20px;
     }
-
     .features li {
       margin: 8px 0;
       color: #555;
+      font-size: 14px;
     }
-
+    .btn {
+      display: inline-block;
+      padding: 15px 40px;
+      background: #af2f2f;
+      color: white;
+      text-decoration: none;
+      border-radius: 3px;
+      font-size: 16px;
+      transition: background 0.3s;
+      margin: 20px 0;
+    }
+    .btn:hover {
+      background: #8b2424;
+    }
     .footer {
-      text-align: center;
-      margin: 40px 0 20px 0;
+      margin-top: 30px;
       color: #bfbfbf;
       font-size: 12px;
     }
-
     .footer a {
       color: #af2f2f;
       text-decoration: none;
-    }
-
-    .comparison {
-      margin: 30px 0;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-    }
-
-    th, td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #ededed;
-      font-size: 14px;
-    }
-
-    th {
-      background: #fafafa;
-      font-weight: 500;
-      color: #333;
-    }
-
-    td {
-      color: #555;
-    }
-
-    .tag {
-      display: inline-block;
-      padding: 2px 8px;
-      background: #e8e8e8;
-      border-radius: 3px;
-      font-size: 11px;
-      margin-right: 5px;
-    }
-
-    .tag.primary {
-      background: #af2f2f;
-      color: white;
-    }
-
-    .tag.secondary {
-      background: #5dc2af;
-      color: white;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>todos</h1>
+    <p class="subtitle">Built with Veda Framework - Vue 3-like reactivity for Web Components</p>
 
-    <div style="text-align: center; margin-bottom: 40px;">
-      <p style="font-size: 18px; color: #777; margin-bottom: 5px;">
-        Two approaches, same functionality
-      </p>
-      <p style="font-size: 14px; color: #bbb;">
-        Built with Veda Framework - Vue 3-like reactivity for Web Components
-      </p>
-    </div>
-
-    <div class="implementations">
-      <!-- Imperative Version -->
-      <div class="card">
-        <h3>🎮 Imperative</h3>
-        <p><span class="tag primary">Loop Component</span> <span class="tag">Reactive</span></p>
-        <p style="margin: 15px 0;">
-          Full control over rendering with Loop component and reactive expressions.
-        </p>
-        <ul>
-          <li>Loop component for lists</li>
-          <li>Manual template control</li>
-          <li>Reactive expressions</li>
-          <li>Best for interactive UIs</li>
-        </ul>
-        <a href="imperative.html" class="btn">Open Imperative Version →</a>
-      </div>
-
-      <!-- Declarative Version -->
-      <div class="card">
-        <h3>📋 Declarative</h3>
-        <p><span class="tag secondary">property/rel</span> <span class="tag">Model-driven</span></p>
-        <p style="margin: 15px 0;">
-          Minimal JavaScript using property and rel components for automatic model binding.
-        </p>
-        <ul>
-          <li>property component for values</li>
-          <li>rel component for relations</li>
-          <li>Auto model binding</li>
-          <li>Best for CRUD apps</li>
-        </ul>
-        <a href="declarative.html" class="btn">Open Declarative Version →</a>
-      </div>
-    </div>
-
-    <div class="comparison">
-      <h2>📊 Quick Comparison</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Feature</th>
-            <th>Imperative</th>
-            <th>Declarative</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><strong>List rendering</strong></td>
-            <td><code>&lt;Loop items="{arr}"&gt;</code></td>
-            <td><code>&lt;ul rel="property"&gt;</code></td>
-          </tr>
-          <tr>
-            <td><strong>Value display</strong></td>
-            <td><code>{this.title}</code></td>
-            <td><code>&lt;span property="title"&gt;</code></td>
-          </tr>
-          <tr>
-            <td><strong>JavaScript code</strong></td>
-            <td>~500 LOC</td>
-            <td>~450 LOC</td>
-          </tr>
-          <tr>
-            <td><strong>Template complexity</strong></td>
-            <td>Medium</td>
-            <td>Low</td>
-          </tr>
-          <tr>
-            <td><strong>Best for</strong></td>
-            <td>Interactive, dynamic UIs</td>
-            <td>Data-driven, CRUD apps</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <a href="src/index.html" class="btn">Launch TodoMVC →</a>
 
     <div class="features">
-      <h3>🚀 Framework Features (Both versions)</h3>
+      <h3>Demonstrates both approaches:</h3>
       <ul>
-        <li><strong>Reactive System</strong> - Vue 3-like reactivity with effects and computed</li>
-        <li><strong>Custom Elements</strong> - Standards-based Web Components</li>
-        <li><strong>Model Integration</strong> - Reactive models with auto-sync</li>
-        <li><strong>Zero Dependencies</strong> - Pure JavaScript, no build required</li>
-        <li><strong>TypeScript Support</strong> - Full type definitions included</li>
-        <li><strong>187 Tests</strong> - Comprehensive test coverage</li>
+        <li><strong>Declarative</strong> - property/rel components for model binding</li>
+        <li><strong>Imperative</strong> - reactive expressions with computed getters</li>
+        <li><strong>Loop/If</strong> - conditional and list rendering</li>
+        <li><strong>effect()/watch()</strong> - reactive side effects</li>
       </ul>
     </div>
 
     <div class="footer">
-      <p>Built with <a href="https://github.com/semantic-machines/veda-client">Veda Framework</a></p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-      <p>
-        <a href="https://github.com/semantic-machines/veda-client/tree/main/app-todo">View Source</a> |
-        <a href="README.md">Documentation</a>
-      </p>
+      <p><a href="README.md">Documentation</a> | <a href="https://github.com/semantic-machines/veda-client">Source</a></p>
     </div>
   </div>
 </body>
 </html>
-
