--- a/app-todo/src/index.html
+++ b/app-todo/src/index.html
@@ -6,172 +6,12 @@
     <meta charset="utf-8"/>
     <title>TodoMVC • Veda Framework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="TodoMVC - Choose implementation"/>
+    <meta name="description" content="TodoMVC implementation with Veda Framework"/>
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, private" />
     <link rel="stylesheet" href="css/base.css"/>
-    <style>
-      body {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        background: #f5f5f5;
-        color: #4d4d4d;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        max-width: 800px;
-        margin: 50px auto;
-        background: white;
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-        padding: 40px;
-      }
-      h1 {
-        font-size: 100px;
-        font-weight: 100;
-        text-align: center;
-        color: rgba(175, 47, 47, 0.15);
-        margin: 0 0 30px 0;
-      }
-      .subtitle {
-        text-align: center;
-        margin-bottom: 40px;
-      }
-      .subtitle p:first-child {
-        font-size: 18px;
-        color: #777;
-        margin-bottom: 5px;
-      }
-      .subtitle p:last-child {
-        font-size: 14px;
-        color: #bbb;
-      }
-      .implementations {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-        margin: 30px 0;
-      }
-      .card {
-        border: 2px solid #ededed;
-        padding: 20px;
-        border-radius: 5px;
-        transition: all 0.3s;
-      }
-      .card:hover {
-        border-color: #af2f2f;
-        box-shadow: 0 2px 8px rgba(175, 47, 47, 0.2);
-      }
-      .card h3 {
-        margin: 0 0 10px 0;
-        color: #af2f2f;
-        font-size: 20px;
-        font-weight: 400;
-      }
-      .card p {
-        font-size: 14px;
-        color: #777;
-        margin: 5px 0;
-      }
-      .card ul {
-        list-style: none;
-        padding: 0;
-        margin: 15px 0;
-      }
-      .card li {
-        padding: 5px 0;
-        font-size: 13px;
-        color: #555;
-      }
-      .card li:before {
-        content: "✓ ";
-        color: #5dc2af;
-        font-weight: bold;
-        margin-right: 5px;
-      }
-      .btn {
-        display: block;
-        width: 100%;
-        padding: 12px;
-        background: #af2f2f;
-        color: white;
-        text-align: center;
-        text-decoration: none;
-        border-radius: 3px;
-        font-size: 14px;
-        font-weight: 400;
-        transition: background 0.3s;
-        margin-top: 15px;
-      }
-      .btn:hover {
-        background: #8b2424;
-      }
-      .tag {
-        display: inline-block;
-        padding: 2px 8px;
-        background: #e8e8e8;
-        border-radius: 3px;
-        font-size: 11px;
-        margin-right: 5px;
-      }
-      .tag.primary { background: #af2f2f; color: white; }
-      .tag.secondary { background: #5dc2af; color: white; }
-      .footer {
-        text-align: center;
-        margin: 40px 0 20px 0;
-        color: #bfbfbf;
-        font-size: 12px;
-      }
-      .footer a {
-        color: #af2f2f;
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
-      <h1>todos</h1>
-
-      <div class="subtitle">
-        <p>Two approaches, same functionality</p>
-        <p>Built with Veda Framework - Vue 3-like reactivity for Web Components</p>
-      </div>
-
-      <div class="implementations">
-        <div class="card">
-          <h3>🎮 Imperative</h3>
-          <p><span class="tag primary">Loop Component</span> <span class="tag">Reactive</span></p>
-          <p style="margin: 15px 0;">
-            Full control over rendering with Loop component and reactive expressions.
-          </p>
-          <ul>
-            <li>Loop component for lists</li>
-            <li>Manual template control</li>
-            <li>Reactive expressions</li>
-            <li>Best for interactive UIs</li>
-          </ul>
-          <a href="imperative.html" class="btn">Open Imperative Version →</a>
-        </div>
-
-        <div class="card">
-          <h3>📋 Declarative</h3>
-          <p><span class="tag secondary">property</span> <span class="tag">Model-driven</span></p>
-          <p style="margin: 15px 0;">
-            Using property attributes for automatic model binding.
-          </p>
-          <ul>
-            <li>property attribute for values</li>
-            <li>Loop for iteration</li>
-            <li>Auto model binding</li>
-            <li>Best for data display</li>
-          </ul>
-          <a href="declarative.html" class="btn">Open Declarative Version →</a>
-        </div>
-      </div>
-
-      <div class="footer">
-        <p>Built with <a href="https://github.com/semantic-machines/veda-client">Veda Framework</a></p>
-        <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-      </div>
-    </div>
+    <script type="module" src="index.js" async></script>
   </body>
 </html>
