feat(Virtual): semantic support, table mode with sticky header/footer
VirtualComponent now supports semantic Loop/If inside its children,
auto-detects <table> as a direct child and switches to spacer-tbody
rendering strategy with position:sticky thead/tfoot. Merged eval
context lets children access both Virtual's computed props and the
parent component's state.

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -47,6 +47,12 @@
         <span>Efficient rendering of 10,000+ items with virtualization</span>
       </a>
     </li>
+    <li>
+      <a href="virtual-table-demo.html">
+        <strong>Virtual Table</strong>
+        <span>Semantic HTML table with virtual scrolling and conditional summary</span>
+      </a>
+    </li>
   </ul>
 
   <div class="info-box">
